--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     annotationProcessor 'com.github.moxy-community:moxy-compiler:2.1.2'
     implementation 'com.github.moxy-community:moxy-androidx:2.1.2'
     implementation 'com.github.moxy-community:moxy-material:2.1.2'
+
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+
 }
